# mathlogic

./: .gitignore  README.md
build-task1-Desktop-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  task3.cbp
task1/: BinaryExpression.cpp  BinaryExpression.h  CMakeLists.txt  Expression.cpp  Expression.h  ExpressionUtils.cpp  ExpressionUtils.h  ParserUtils.cpp  conjunction.cpp  disjunction.cpp  disjunction.h  implication.cpp  main.cpp  negation.cpp  negation.h  task1.pro  unaryexpression.h  variable.cpp  variable.h
task2/: CMakeLists.txt  main.cpp
task2/Parser/: BinaryExpression.cpp  ExpressionUtils.cpp  ExpressionUtils.h  ParserUtils.cpp  disjunction.cpp  implication.cpp  negation.h  unaryexpression.cpp
task3/: CMakeLists.txt  main.cpp
task3/Parser/: BinaryExpression.h  Expression.cpp  Expression.h  ExpressionUtils.cpp  ExpressionUtils.h  ParserUtils.h  conjunction.cpp  conjunction.h  disjunction.cpp  implication.cpp  implication.h  negation.cpp  negation.h  unaryexpression.cpp  unaryexpression.h  variable.cpp  variable.h
task3/Proof/: proofcheck.cpp  proofcheck.h  proofdeduction.cpp
task3/ProofSimple/: contraposition.in  not.in  or.in
task4/: CMakeLists.txt  main.cpp
task4/Parser/: BinaryExpression.cpp  BinaryExpression.h  Expression.cpp  Expression.h  FArguments.cpp  FArguments.h  Parser.cpp  Parser.h  Shtrix.cpp  Shtrix.h  Zero.cpp  Zero.h  addition.cpp  addition.h  conjunction.h  disjunction.h  equality.cpp  equality.h  functionmy.cpp  functionmy.h  implication.cpp  implication.h  kvantor.cpp  kvantor.h  kvantorall.cpp  kvantorall.h  kvantorexist.cpp  kvantorexist.h  multiplication.cpp  multiplication.h  negation.cpp  negation.h  predicat.cpp  predicat.h  subtraction.cpp  subtraction.h  unaryexpression.cpp  unaryexpression.h  variable.cpp  variable.h
task4/Proof/: proofcheck.cpp  proofcheck.h  proofdeduction.cpp  proofdeduction.h  proofgenerate.cpp
task4/ProofSimple/: aOrNota.in  and.in  implication.in
task5/: CMakeLists.txt  Makefile  main.cpp  task5
task5/Kripke/: Generator.cpp  Generator.h  PairKripke.cpp  PairKripke.h  Tree.cpp  Tree.h  TreeView.cpp  TreeView.h  World.cpp  World.h
task5/Parser/: BinaryExpression.cpp  Expression.h  Parser.cpp  Parser.h  conjunction.cpp  conjunction.h  disjunction.cpp  disjunction.h  implication.cpp  implication.h  negation.cpp  negation.h  variable.cpp  variable.h
task5/Proof/: proofcheck.cpp  proofdeduction.cpp  proofdeduction.h  proofgenerate.cpp  proofgenerate.h
task8/: CMakeLists.txt  Makefile  input.txt  main.cpp  output.txt  task8
task8/Parser/: CNF.cpp  CNF.h  Expression.cpp  Expression.h  Parser.cpp  Parser.h
